# agipot

./: .gitignore  README.md  pyproject.toml
agipot/: settings.py
scripts/: Create a AI Agent Using LLM.ipynb  LLM Journey (1) structured output.ipynb  LLM Journey (2) Tooling.ipynb  LLM Journey (4) build Simple Agent.ipynb  LLM Journey (5) Chain Of Density 기법.ipynb  generate and run shell script using openai.ipynb
tests/: test_api_call.py
